--- a/index.html
+++ b/index.html
@@ -1,11 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="normalize.css">   
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="responsive.css">
+    <script src="https://kit.fontawesome.com/7d7b31a9bc.js" crossorigin="anonymous"></script>
+
+    <title>Selfcare - home</title>
 </head>
 <body>
-    
+    <header>
+        <nav id="nav">
+            <a href="" id="nav-title-icon"><i class="fa-solid fa-star"></i>Selfcare</a>
+            <ul id="nav-menu-ul">
+                <li id="nav-menu-li"><a href=""></a><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li id="nav-menu-li"><a href=""></a><i class="fa-solid fa-user"></i></li>
+                <li id="nav-menu-li"><a href=""></a><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <figure>
+                <img src="assets/banner.png" alt="clique aqui" id="banner">
+            </figure>
+        </section>
+        <div id="title-menu">
+            <h3>Promoção</h3>
+            <h3>9 Produtos</h3>
+        </div>
+        <hr>
+        <div id="grid-container">
+            <div id="grid-item-main-4">
+                <img src="assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+            <div id="grid-item-main-5">
+                <img src="assets/devin-avery-bMH8ub9z1_U-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+            <div id="grid-item-main-6">
+                <img src="assets/devin-avery-BRVqq2uak4E-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+
+
+            <div id="grid-item-main-4">
+                <img src="assets/nery-montenegro-SmEty_TVr80-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+            <div id="grid-item-main-5">
+                <img src="assets/olena-sergienko-GOVTETevRm8-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+            <div id="grid-item-main-6">
+                <img src="assets/pharma-hemp-complex-tAzdKblAinw-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+
+
+            <div id="grid-item-main-7">
+                <img src="assets/phaedra-botanicals-uFAHrKYkTVI-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+            <div id="grid-item-main-8">
+                <img src="assets/pharma-hemp-complex-yVAXSK6zFIM-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+            <div id="grid-item-main-9">
+                <img src="assets/chandra-oh-y5hRv6UNKMg-unsplash.jpg" alt="" id="img-main">
+                <div id="mt-20">
+                    Lorem ipsum dolor, sit
+                    <p>R$<b id="title-preco-main"> 50,00</b></p>
+                </div>
+            </div>
+        </div> 
+    <hr>    
+    </main>
+    <footer>
+        <div  id="rodape-main">
+            <nav>
+                <div>
+                    <ul id="rodape-main-ul">
+                        <li><a href="" id="rodape-main-link">Contato</a></li>
+                        <li><a href="" id="rodape-main-link">Termo de serviço</a></li>
+                        <li><a href="" id="rodape-main-link">Política de privacidade</a></li>
+                        <li><a href="" id="rodape-main-link">Cancelamento, troca e reembolso</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div id="mt-20">
+                <label for="input">Newsletter</label>
+                <input type="email" id="input"placeholder="Digite seu melhor e-mail">
+                <button id="btn">Inscrever</button>
+            </div>
+        </div>
+        <hr>
+
+        <div id="rodape-info">
+            <div>
+                <a href="" id="rodape-info-linkIcon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="" id="rodape-info-linkIcon"><i class="fa-brands fa-square-facebook"></i></a>
+            </div>
+            <div>
+                <a href="" id="rodape-info-linkIcon"><i class="fa-brands fa-cc-mastercard"></i></a>
+                <a href="" id="rodape-info-linkIcon"><i class="fa-brands fa-cc-visa"></i></a>
+                <a href="" id="rodape-info-linkIcon"><i class="fa-brands fa-paypal"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
