--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section>
             <figure>
-                <img src="assets/banner.png" alt="clique aqui" id="banner">
+                <img src="assets/Mini Perfumes/Mercado Shop desktop.png" alt="clique aqui" id="banner">
             </figure>
         </section>
         <div id="title-menu">
@@ -36,21 +36,21 @@
         <hr>
         <div id="grid-container">
             <div id="grid-item-main-4">
-                <img src="assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A01.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
                 </div>
             </div>
             <div id="grid-item-main-5">
-                <img src="assets/devin-avery-bMH8ub9z1_U-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A02.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
                 </div>
             </div>
             <div id="grid-item-main-6">
-                <img src="assets/devin-avery-BRVqq2uak4E-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A03.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
