--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
             <div id="grid-item-main-4">
-                <img src="assets/nery-montenegro-SmEty_TVr80-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A04.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
