--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div id="grid-item-main-5">
-                <img src="assets/olena-sergienko-GOVTETevRm8-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A05.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
