--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div id="grid-item-main-6">
-                <img src="assets/pharma-hemp-complex-tAzdKblAinw-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A06.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
