--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
             <div id="grid-item-main-7">
-                <img src="assets/phaedra-botanicals-uFAHrKYkTVI-unsplash.jpg" alt="" id="img-main">
+                <img src="assets/Mini Perfumes/A07.png" alt="" id="img-main">
                 <div id="mt-20">
                     Lorem ipsum dolor, sit
                     <p>R$<b id="title-preco-main"> 50,00</b></p>
